k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalibur-gym
  namespace: excalibur-gym
spec:
  ingressClassName: nginx
  rules:
    - host: excalibur.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
